plugins {
    id 'java'
    id 'org.springframework.boot' version "${springBootVersion}"
    id 'io.spring.dependency-management' version "${springDepManVersion}"
//    id 'checkstyle'
}

group = 'ru.otus.hw'
version = 'snapshot'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.projectlombok:lombok'
    implementation 'org.yaml:snakeyaml'

    annotationProcessor 'org.projectlombok:lombok'

    implementation "org.liquibase:liquibase-core"
    implementation "com.h2database:h2"

    runtimeOnly "org.postgresql:postgresql"

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

//checkstyle {
//    toolVersion = '10.15.0'
//    configFile = file("https://raw.githubusercontent.com/OtusTeam/Spring/master/checkstyle.xml")
//}

tasks.named('test') {
    useJUnitPlatform()
}